# CGAL_Samples

./: README.md  memo.txt
@template_Qt/: CMakeLists.txt
cmake_lib/: cgal.cmake  cgal_qt.cmake
sample002_mesh_deform_02/: main.cpp
sample002_mesh_deform_03/: CMakeLists.txt  main.cpp
sample002_polyhedron_/: main.cpp
sample002_polyhedron_01/: main.cpp
sample002_polyhedron_increament/: main.cpp
test001_helloCGAL/: CMakeLists.txt  main.cpp
test002_tutorial2/: main.cpp
test003_tutorial3/: main.cpp
test004_draw_surface_mesh/: CMakeLists.txt  main.cpp
test005_read_ply/: CMakeLists.txt  main.cpp
test006_dump_itr/: CMakeLists.txt  main.cpp
test007_cmake_test01/: main.cpp
test008_cmake_qt/: CMakeLists.txt  main.cpp
test009_output_ply/: main.cpp
test010_orient_polygon_soup/: main.cpp
test011_orient_rapair_soup/: main.cpp
test012_orient_polygon/: CMakeLists.txt
test013_use_with_vcg/: CMakeLists.txt  main.cpp
test013b_use_with_vcg_polyhedron/: CMakeLists.txt  main.cpp
test014_boolian/: CMakeLists.txt  main.cpp
test015_calculate_volume/: main.cpp
test016_hausdorff_dist/: main.cpp
test017_boolian_PMP_op/: main.cpp
test018_boolian_PMP_union/: main.cpp
test019_boolian_PMP_dif/: main.cpp
test020_hole_filling_PMP/: CMakeLists.txt  main.cpp
test021_smoothing_PMP/: main.cpp
test022_trianglate_PMP/: main.cpp
test023_isotropic_PMP/: main.cpp
test024_hole_filling_tri_PMP/: main.cpp
test025_self_intersect_PMP/: CMakeLists.txt  main.cpp
test026_smoothing/: CMakeLists.txt  main.cpp
test027_boolian_PMP_all/: main.cpp
test028_simplification001/: main.cpp
test029_simplification056/: main.cpp
test030_Named_pram_test/: main.cpp
test031_simplification057/: main.cpp
test032_mesh_segmentation/: main.cpp
test033_deform_def/: main.cpp
test033b_deform_def_surface/: main.cpp
test034_deform_arap/: main.cpp
test035_deform_earap/: main.cpp
test036_polyhedron_add_item/: main.cpp
test037_hole_filling_triangulte_refine/: main.cpp
test038_hole_filling_triangulte_refine_surface_mesh/: main.cpp
test039_surface_mesh_kernel/: main.cpp
test040_surface_mesh_iter/: main.cpp
test041_property_map/: main.cpp
test042_hole_filleng_poly/: main.cpp
test043_get_border_lists/: main.cpp
